Port ubuntu-11.04 boot params and preseed tweaks to ubuntu-10.10.

--- a/common/ubuntu-10.10/preseed.cfg
+++ b/common/ubuntu-10.10/preseed.cfg
@@ -78,7 +78,6 @@ d-i pkgsel/upgrade select full-upgrade
 
 d-i grub-installer/only_debian boolean true
 d-i grub-installer/with_other_os boolean true
-d-i finish-install/reboot_in_progress note
 
 #For the update
 d-i pkgsel/update-policy select none
@@ -96,3 +95,14 @@ d-i mirror/http/directory	string /ubuntu
 d-i mirror/suite	select maverick
 d-i mirror/http/proxy string
 #d-i debian-installer/allow_unauthenticated	string true
+
+# This command, and you can only have one, is run just before the install
+# finishes, but when there is still a usable /target directory.
+# You can chroot to /target and use it directly, or use the apt-install
+# and in-target commands to easily install packages and run commands in
+# the target system.
+#
+d-i preseed/late_command string in-target /usr/bin/aptitude -q -y update; in-target /usr/bin/aptitude -q -y safe-upgrade;  in-target /usr/bin/aptitude -q -y clean;
+
+# Avoid that last message about the install being complete.
+d-i finish-install/reboot_in_progress note
