Port ubuntu-11.04 boot params and preseed tweaks to debian-6.0.0.

--- a/common/debian-6.0.0/preseed.cfg
+++ b/common/debian-6.0.0/preseed.cfg
@@ -181,7 +181,7 @@ d-i passwd/root-password-again password vagrant
 #d-i passwd/root-password-crypted password [MD5 hash]
 
 # To create a normal user account.
-d-i passwd/user-fullname string Vagrant User
+d-i passwd/user-fullname string vagrant
 d-i passwd/username string vagrant
 # Normal user's password, either in clear text
 d-i passwd/user-password password vagrant
@@ -226,7 +226,7 @@ d-i pkgsel/include string openssh-server ntp acpid  sudo bzip2
 
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
-d-i pkgsel/upgrade select none
+d-i pkgsel/upgrade select full-upgrade
 
 # Some versions of the installer can report back on what software you have
 # installed, and what software you use. The default is not to report back,
@@ -310,3 +310,5 @@ d-i finish-install/reboot_in_progress note
 # still a usable /target directory. You can chroot to /target and use it
 # directly, or use the apt-install and in-target commands to easily install
 # packages and run commands in the target system.
+
+d-i preseed/late_command string in-target /usr/bin/aptitude -q -y update; in-target /usr/bin/aptitude -q -y safe-upgrade;  in-target /usr/bin/aptitude -q -y clean;
