Fix preseeds for oneric and precise (der).

--- a/common/ubuntu-12.04/preseed.cfg
+++ b/common/ubuntu-12.04/preseed.cfg
@@ -92,7 +92,7 @@ d-i mirror/protocol	string http
 d-i mirror/country string manual
 d-i mirror/http/hostname	string us.archive.ubuntu.com
 d-i mirror/http/directory	string /ubuntu
-d-i mirror/suite	select natty
+d-i mirror/suite	select precise
 d-i mirror/http/proxy string
 #d-i debian-installer/allow_unauthenticated	string true
 
