Remove proxy/mirror in precise preseed.

--- a/common/ubuntu-12.04/preseed.cfg
+++ b/common/ubuntu-12.04/preseed.cfg
@@ -86,14 +86,14 @@ d-i pkgsel/update-policy select none
 #Use mirror
 #d-i apt-setup/use_mirror boolean true
 #d-i     mirror/country          string manual
-d-i     mirror/country          string US
+#d-i     mirror/country          string US
 
-d-i mirror/protocol	string http
-d-i mirror/country string manual
-d-i mirror/http/hostname	string us.archive.ubuntu.com
-d-i mirror/http/directory	string /ubuntu
-d-i mirror/suite	select precise
-d-i mirror/http/proxy string
+#d-i mirror/protocol	string http
+#d-i mirror/country string manual
+#d-i mirror/http/hostname	string us.archive.ubuntu.com
+#d-i mirror/http/directory	string /ubuntu
+#d-i mirror/suite	select precise
+#d-i mirror/http/proxy string
 #d-i debian-installer/allow_unauthenticated	string true
 
 # This command, and you can only have one, is run just before the install
